# shelfbox

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/repo-shelve/: Cargo.toml
crates/repo-shelve-core/: Cargo.toml
crates/repo-shelve-core/src/: config.rs  context.rs  error.rs  git.rs  ignore.rs  lib.rs  link.rs
crates/repo-shelve-core/src/ops/: add.rs  doctor.rs  list.rs  restore.rs  status.rs
crates/repo-shelve-core/src/store/: index.rs  manifest.rs
crates/repo-shelve-core/tests/: ops_integration.rs
crates/repo-shelve/src/: cli.rs
crates/shelfbox/: Cargo.toml
crates/shelfbox-core/: Cargo.toml
crates/shelfbox-core/src/: config.rs  context.rs  error.rs  failpoint.rs  git.rs  ignore.rs  lib.rs  link.rs
crates/shelfbox-core/src/api/: config.rs  item.rs  mod.rs  repo.rs  store.rs
crates/shelfbox-core/src/domain/: copy_safety.rs  ids.rs  index.rs  manifest.rs  materialization.rs  mod.rs  mutation_durability.rs  operation_record.rs  ownership.rs  path.rs  recovery_fingerprint.rs
crates/shelfbox-core/src/fs/: canonical_transfer.rs  file_identity.rs  lock.rs  materializer.rs  mod.rs  mutation_journal.rs  paths.rs  permissions.rs  secure_transfer.rs  symlink.rs
crates/shelfbox-core/src/fs/platform/: mod.rs  unix.rs  windows.rs
crates/shelfbox-core/src/git/: command.rs  discover.rs  exclude.rs  mod.rs  remote.rs  tracked.rs
crates/shelfbox-core/src/integration_tests/: chaos_integration.rs  context_modes.rs  ops_integration.rs  recovery_integration.rs  scenario_integration.rs
crates/shelfbox-core/src/integration_tests/common/: mod.rs
crates/shelfbox-core/src/ops/: add.rs  add_recovery.rs  adopt.rs  detect_transitions.rs  doctor.rs  gc.rs  info.rs  integrity.rs  lifecycle_recovery.rs  list.rs  materialization_boundary_tests.rs  migrate_manifest.rs  mod.rs  move_item.rs  path.rs  rebuild_index.rs  reclaim.rs  recovery.rs  relink.rs  repair.rs  restore.rs  status.rs  store_verify.rs  sync.rs
crates/shelfbox-core/src/plan/: item_add.rs  item_move.rs  item_relink.rs  item_repair.rs  item_restore.rs  item_sync.rs  manifest_migration.rs  mod.rs  repo_reclaim.rs  repo_repair.rs  store_gc.rs  store_rebuild_index.rs
crates/shelfbox-core/src/policy/: gc_policy.rs  item_validation.rs  materialization_policy.rs  migration_policy.rs  mod.rs  path_escape_policy.rs  reclaim_policy.rs  recovery_policy.rs  repair_policy.rs  sync_policy.rs
crates/shelfbox-core/src/storage/: atomic_write.rs  index_store.rs  layout.rs  manifest_legacy.rs  manifest_store.rs  meta_store.rs  mod.rs  operation_record_store.rs  scanner.rs
crates/shelfbox-core/src/store/: index.rs  manifest.rs  manifest_legacy.rs  meta.rs  mod.rs  scanner.rs
crates/shelfbox-core/tests/: architecture_boundaries.rs  chaos_integration.rs  context_modes.rs  ops_integration.rs  public_api_compat.rs  recovery_integration.rs  scenario_integration.rs
crates/shelfbox-core/tests/common/: mod.rs
crates/shelfbox-core/tests/fixtures/: item-status-copy-v2.json  item-status-symlink-v2.json  repo-status-symlink-v2.json
crates/shelfbox/src/: cli.rs  main.rs
crates/shelfbox/src/cmd/: config.rs  format.rs  internal.rs  item.rs  mod.rs  repo.rs  store.rs  util.rs
crates/shelfbox/src/commands/: config.rs  format.rs  internal.rs  item.rs  mod.rs  repo.rs  store.rs
crates/shelfbox/tests/: cli_behavior_lock.rs
crates/shelfbox/tests/common/: mod.rs
crates/shelfbox/tests/fixtures/: item-status-symlink-v1.json  repo-status-symlink-v1.json
docs/: architecture.md  failure-matrix.md  getting-started.md  index.md  ownership-model.md  user-guide.md  workflows.md
docs/architecture/: architecture-overview.md  data-model.md  design-decisions.md  module-map.md  v0.8.1-compatibility-baseline.md
scripts/: install.ps1  install.sh
(+7 files in other folders)
