[workspace]
members = [
    "crates/shelfbox-core",
    "crates/shelfbox",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/massa-kj/shelfbox"

# Shared dependency versions to keep the workspace in sync.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
ulid = "1"
dirs = "5"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tempfile = "3"
fd-lock = "4"
