[package]
name = "repo-shelve-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for repo-shelve: shelve repo-local files outside Git"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
dirs.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
