[package]
name = "shelfbox-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for shelfbox: shelve repo-local files outside Git"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ulid.workspace = true
dirs.workspace = true
toml.workspace = true
toml_edit.workspace = true
fd-lock.workspace = true

[dev-dependencies]
tempfile.workspace = true
