[package]
name = "shelfbox"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shelve repo-local files outside Git, keeping them visible in your editor"

[[bin]]
name = "shelfbox"
path = "src/main.rs"

[dependencies]
shelfbox-core = { path = "../shelfbox-core" }
clap.workspace = true
clap_complete.workspace = true
anyhow.workspace = true
dirs.workspace = true
serde = { workspace = true }
serde_json.workspace = true
